# Neki

./: README.md
.github/workflows/: build.yml
Demo/: CMakeLists.txt
Demo/Scenes/: DemoScene.nkscene
Demo/src/: main.cpp
Improvements/: Improvements.md
Vulnerability/: Vulnerabilities.md
src/Animation/: AnimationSystem.cpp  AnimationSystem.h
src/Audio/: AudioEngine.cpp  AudioEngine.h
src/Components/: CTransform.h
src/Core-ECS/: Registry.h
src/Core/Layers/: RenderLayer.cpp
src/Core/Utils/: ImageLoader.cpp  TextureCompressor.cpp
src/Events/: EventBus.h  GameEvents.h
src/Managers/: InputManager.cpp
src/Scripting/: ExampleScripts.h  IScript.h  LuaEngine.cpp  LuaEngine.h  ScriptManager.cpp  ScriptManager.h
src/Serialization/: SceneSerializer.cpp  SceneSerializer.h
src/Utils/Profiler/: Profiler.h
